--- a/docker-compose-mysql-binlog.yml
+++ b/docker-compose-mysql-binlog.yml
@@ -12,10 +12,10 @@ services:
       - zookeeper
       - cdcservice
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql/eventuate
-      SPRING_DATASOURCE_USERNAME: mysqluser
-      SPRING_DATASOURCE_PASSWORD: mysqlpw
-      SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.jdbc.Driver
+      DB_URL: jdbc:mysql://mysql/eventuate
+      DB_DRIVERCLASSNAME: com.mysql.jdbc.Driver
+      DB_USERNAME: mysqluser
+      DB_PASSWORD: mysqlpw
       EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
       EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
 
