--- a/end-to-end-tests/build.gradle
+++ b/end-to-end-tests/build.gradle
@@ -3,6 +3,8 @@ dependencies {
     compile project(":customer-web-api")
     compile project(":order-web-api")
 
+    compile "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
+
     testCompile "io.eventuate.util:eventuate-util-test:$eventuateUtilVersion"
     testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
 }
