--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ eventuateMavenRepoUrl=https://dl.bintray.com/eventuateio-oss/eventuate-maven-rel
 
 springBootVersion=2.1.5.RELEASE
 
-eventuateTramVersion=0.23.0.MICRONAUT.M2
+eventuateTramVersion=0.21.0-SNAPSHOT
 eventuateUtilVersion=0.1.0.RELEASE
 dockerComposePluginVersion=0.4.5
 eventuateMessagingKafkaVersion=0.3.0.MICRONAUT.M2
