--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 datasources:
   default:
     url: ${DB_URL}
-    driverclassname: ${DB_DRIVERCLASSNAME}
+    driverClassName: ${DB_DRIVERCLASSNAME}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
 jpa:
