--- a/order-history-service/src/main/resources/application.yml
+++ b/order-history-service/src/main/resources/application.yml
@@ -3,6 +3,8 @@ endpoints:
     enabled: true
     sensitive: false
     details-visible: ANONYMOUS
+
 mongodb:
-  uri: mongodb://mongodb/customers_and_orders
+  uri: ${SPRING_DATA_MONGODB_URI}
+
 
