--- a/order-history-service/build.gradle
+++ b/order-history-service/build.gradle
@@ -1,20 +1,37 @@
-buildscript {
-    repositories {
-        mavenCentral()
-        jcenter()
-    }
-    dependencies {
-        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
-    }
+plugins {
+    id "io.spring.dependency-management"
+    id "java"
+    id "com.github.johnrengelman.shadow" version "4.0.2"
+    id "application"
 }
 
-apply plugin: 'org.springframework.boot'
-apply plugin: "io.spring.dependency-management"
+repositories {
+    mavenCentral()
+    maven { url "https://jcenter.bintray.com" }
+}
+
+dependencyManagement {
+    imports {
+        mavenBom 'io.micronaut:micronaut-bom:1.1.3'
+    }
+}
 
 dependencies {
     compile project(":order-history-backend")
 
-    compile "org.springframework.boot:spring-boot-starter"
-    compile "org.springframework.boot:spring-boot-starter-web"
-    compile "org.springframework.boot:spring-boot-starter-actuator"
+    annotationProcessor "javax.persistence:javax.persistence-api:2.2"
+    annotationProcessor "io.micronaut:micronaut-inject-java"
+    annotationProcessor "io.micronaut:micronaut-validation"
+    compile "io.micronaut:micronaut-inject"
+    compile "io.micronaut:micronaut-validation"
+    compile "io.micronaut:micronaut-runtime"
+    compile "io.micronaut:micronaut-http-server-netty"
+    compile 'io.micronaut:micronaut-management'
+    runtime "ch.qos.logback:logback-classic:1.2.3"
+}
+
+mainClassName = "io.eventuate.examples.tram.ordersandcustomers.orderhistoryservice.OrderHistoryServiceMain"
+
+shadowJar {
+    mergeServiceFiles()
 }
