Moved docker image version config to gradle

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,6 @@ dockerComposePluginVersion=0.4.5
 eventuateMessagingKafkaVersion=0.3.0.MICRONAUT.M2
 version=0.1.0-SNAPSHOT
 
+eventuateCommonImageVersion=0.8.0.RELEASE
+eventuateMessagingKafkaImageVersion=0.3.0.RELEASE
+eventuateCdcImageVersion=0.5.0.RELEASE
