--- a/docker-compose-mysql-binlog.yml
+++ b/docker-compose-mysql-binlog.yml
@@ -55,15 +55,13 @@ services:
       EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
 
   zookeeper:
-    image: eventuateio/eventuate-zookeeper:0.4.0.RELEASE
+    image: eventuateio/eventuate-zookeeper:$EVENTUATE_COMMON_VERSION
     ports:
       - 2181:2181
-      - 2888:2888
-      - 3888:3888
 
 
   kafka:
-    image: eventuateio/eventuate-kafka:0.3.0.RELEASE
+    image: eventuateio/eventuate-kafka:$EVENTUATE_KAFKA_VERSION
     ports:
       - 9092:9092
     depends_on:
@@ -72,9 +70,10 @@ services:
       - ADVERTISED_HOST_NAME=${DOCKER_HOST_IP}
       - KAFKA_HEAP_OPTS=-Xmx320m -Xms320m
       - ZOOKEEPER_SERVERS=zookeeper:2181
+      - ZOOKEEPER_CONNECTION_TIMEOUT_MS=60000
 
   mysql:
-    image: eventuateio/eventuate-mysql:0.5.0.RELEASE
+    image: eventuateio/eventuate-mysql:$EVENTUATE_COMMON_VERSION
     ports:
       - 3306:3306
     environment:
@@ -91,7 +90,7 @@ services:
       - "27017:27017"
 
   cdcservice:
-    image: eventuateio/eventuate-cdc-service:0.4.0.RELEASE
+    image: eventuateio/eventuate-cdc-service:$EVENTUATE_CDC_VERSION
     ports:
       - "8099:8080"
     depends_on:
