--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,10 @@ eventuateMavenRepoUrl=https://dl.bintray.com/eventuateio-oss/eventuate-maven-rel
 
 springBootVersion=2.1.5.RELEASE
 
-eventuateTramVersion=0.22.0-SNAPSHOT
+eventuateTramVersion=0.23.0.MICRONAUT.M4
 eventuateUtilVersion=0.1.0.RELEASE
 dockerComposePluginVersion=0.4.5
-eventuateMessagingKafkaVersion=0.3.0.MICRONAUT.M2
+eventuateMessagingKafkaVersion=0.3.0.MICRONAUT.M3
 version=0.1.0-SNAPSHOT
 
 eventuateCommonImageVersion=0.8.0.RELEASE
