Start MySQL before starting services
Fixes #2

--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,12 @@ dockerCompose {
     environment.put "EVENTUATE_KAFKA_VERSION", eventuateMessagingKafkaImageVersion
     environment.put "EVENTUATE_CDC_VERSION", eventuateCdcImageVersion
 
+    mysqlbinlogOnly {
+        projectName = null
+        startedServices = [ 'mysql']
+        useComposeFiles = ["docker-compose-mysql-binlog.yml"]
+    }
+
     mysqlbinlog {
         projectName = null
         useComposeFiles = ["docker-compose-mysql-binlog.yml"]
@@ -67,3 +73,6 @@ dockerCompose {
         startedServices = ["cdcservice"]
     }
 }
+
+mysqlbinlogComposeUp.dependsOn(mysqlbinlogComposeBuild)
+mysqlbinlogComposeUp.dependsOn(mysqlbinlogOnlyComposeUp)
