Fixed container start up. Added swagger.

--- a/order-history-service/src/main/resources/application.yml
+++ b/order-history-service/src/main/resources/application.yml
@@ -7,4 +7,12 @@ endpoints:
 mongodb:
   uri: ${SPRING_DATA_MONGODB_URI}
 
-
+micronaut:
+  router:
+    static-resources:
+      swagger-ui:
+        paths: classpath:swagger-ui
+        mapping: /swagger-ui/**
+      swagger:
+        paths: classpath:META-INF/swagger
+        mapping: /swagger/**
