--- a/order-history-service/src/main/resources/application.yml
+++ b/order-history-service/src/main/resources/application.yml
@@ -11,7 +11,7 @@ micronaut:
   router:
     static-resources:
       swagger-ui:
-        paths: classpath:swagger-ui
+        paths: classpath:META-INF/swagger-ui
         mapping: /swagger-ui/**
       swagger:
         paths: classpath:META-INF/swagger
