--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -22,7 +22,7 @@ micronaut:
   router:
     static-resources:
       swagger-ui:
-        paths: classpath:swagger-ui
+        paths: classpath:META-INF/swagger-ui
         mapping: /swagger-ui/**
       swagger:
         paths: classpath:META-INF/swagger
