--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,6 +1,25 @@
+plugins {
+    id "io.spring.dependency-management"
+}
+
+repositories {
+    mavenCentral()
+    maven { url "https://jcenter.bintray.com" }
+}
+
 dependencies {
+    implementation platform("io.micronaut:micronaut-bom:$micronautVersion")
+    annotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
+
     compile "io.eventuate.tram.core:eventuate-tram-events:$eventuateTramVersion"
     compile 'javax.persistence:javax.persistence-api:2.2'
     compile "commons-lang:commons-lang:2.6"
+
+    annotationProcessor "io.micronaut.data:micronaut-data-processor:$micronautDataVersion" // necessary
+    annotationProcessor "io.micronaut:micronaut-inject-java"
+    annotationProcessor "io.micronaut:micronaut-validation"
+    compile "io.micronaut:micronaut-inject"
+    compile "io.micronaut:micronaut-validation"
+    compile "io.micronaut:micronaut-runtime"
 }
 
