--- a/customer-service/build.gradle
+++ b/customer-service/build.gradle
@@ -1,7 +1,6 @@
 plugins {
-    id "io.spring.dependency-management"
     id "java"
-    id "com.github.johnrengelman.shadow" version "4.0.2"
+    id "com.github.johnrengelman.shadow" version "5.0.0"
     id "application"
 }
 
@@ -10,17 +9,21 @@ repositories {
     maven { url "https://jcenter.bintray.com" }
 }
 
-dependencyManagement {
-    imports {
-        mavenBom 'io.micronaut:micronaut-bom:1.1.3'
-    }
+version "0.1"
+group "customer.service"
+
+configurations {
+    developmentOnly
 }
 
 dependencies {
+    implementation platform("io.micronaut:micronaut-bom:$micronautVersion")
+    annotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
+    testAnnotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
+
     compile project(":customer-backend")
     compile project(":customer-web-api")
 
-    annotationProcessor "javax.persistence:javax.persistence-api:2.2"
     annotationProcessor "io.micronaut:micronaut-inject-java"
     annotationProcessor "io.micronaut:micronaut-validation"
     compile "io.micronaut:micronaut-inject"
@@ -29,10 +32,12 @@ dependencies {
     compile "io.micronaut:micronaut-http-server-netty"
     compile 'io.micronaut:micronaut-management'
     runtime "ch.qos.logback:logback-classic:1.2.3"
-
+    annotationProcessor "io.micronaut:micronaut-graal"
+    compileOnly "com.oracle.substratevm:svm"
     annotationProcessor "io.micronaut.configuration:micronaut-openapi"
     compile "io.swagger.core.v3:swagger-annotations"
     compile "io.eventuate.util:eventuate-util-swagger-ui:$eventuateUtilVersion"
+//    configurations.compile.exclude(group: 'com.microsoft.sqlserver', module: 'mssql-jdbc')
 }
 
 mainClassName = "io.eventuate.examples.tram.ordersandcustomers.customers.CustomerServiceMain"
