--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -1,24 +1,21 @@
+jackson:
+  bean-introspection-module: true
 datasources:
   default:
     url: ${DB_URL}
     driverClassName: ${DB_DRIVERCLASSNAME}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
-jpa:
-  default:
-    packages-to-scan:
-      - 'io.eventuate.examples.tram.ordersandcustomers.customers.domain'
-    properties:
-      hibernate:
-        hbm2ddl:
-          auto: update
-        show_sql: true
+    schema-generate: CREATE_DROP
+    dialect: POSTGRES
 endpoints:
   health:
     enabled: true
     sensitive: false
     details-visible: ANONYMOUS
 micronaut:
+  application:
+    name: customer-service
   router:
     static-resources:
       swagger-ui:
