--- a/customer-web-api/build.gradle
+++ b/customer-web-api/build.gradle
@@ -1,3 +1,23 @@
+plugins {
+    id "io.spring.dependency-management"
+}
+
+repositories {
+    mavenCentral()
+    maven { url "https://jcenter.bintray.com" }
+}
+
 dependencies {
     compile project(":common")
+
+    implementation platform("io.micronaut:micronaut-bom:$micronautVersion")
+    annotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
+
+    annotationProcessor "io.micronaut.data:micronaut-data-processor:$micronautDataVersion" // necessary
+    annotationProcessor "io.micronaut:micronaut-inject-java"
+    annotationProcessor "io.micronaut:micronaut-validation"
+    compile "io.micronaut:micronaut-inject"
+    compile "io.micronaut:micronaut-validation"
+    compile "io.micronaut:micronaut-runtime"
 }
+
