--- a/order-history-backend/build.gradle
+++ b/order-history-backend/build.gradle
@@ -24,7 +24,7 @@ dockerCompose {
 
 dependencyManagement {
     imports {
-        mavenBom 'io.micronaut:micronaut-bom:1.1.0'
+        mavenBom "io.micronaut:micronaut-bom:$micronautVersion"
     }
 }
 
