--- a/order-history-service/build.gradle
+++ b/order-history-service/build.gradle
@@ -12,7 +12,7 @@ repositories {
 
 dependencyManagement {
     imports {
-        mavenBom 'io.micronaut:micronaut-bom:1.1.3'
+        mavenBom "io.micronaut:micronaut-bom:$micronautVersion"
     }
 }
 
