--- a/customer-service/src/main/resources/META-INF/native-image/customer.service/customer-service/native-image.properties
+++ b/customer-service/src/main/resources/META-INF/native-image/customer.service/customer-service/native-image.properties
@@ -2,6 +2,7 @@ Args = -H:+TraceClassInitialization \
     -H:+ReportExceptionStackTraces \
     -H:IncludeResources=application.yml \
     -H:Name=customer-service-executable \
+    -H:ReflectionConfigurationFiles=reflection \
     -H:Class=io.eventuate.examples.tram.ordersandcustomers.customers.CustomerServiceMain \
     -Dio.netty.noUnsafe=true \
     --no-server \
@@ -9,8 +10,6 @@ Args = -H:+TraceClassInitialization \
     --allow-incomplete-classpath \
     --report-unsupported-elements-at-runtime \
     --initialize-at-build-time=org.postgresql.Driver \
-    --initialize-at-build-time=org.postgresql.util.SharedTimer \
-    --initialize-at-build-time=org.springframework.context.annotation.ScopedProxyMode \
-    --initialize-at-build-time=org.springframework.context.annotation.FilterType
+    --initialize-at-build-time=org.postgresql.util.SharedTimer
 
 
