--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,8 @@ eventuateTramVersion=0.22.0-SNAPSHOT
 eventuateUtilVersion=0.3.0.RELEASE
 dockerComposePluginVersion=0.4.5
 eventuateMessagingKafkaVersion=0.1.0-SNAPSHOT
+eventuateTramMessagingHttpVersion=0.1.0-SNAPSHOT
+eventuateCommonVersion=0.1.0-SNAPSHOT
 version=0.1.0-SNAPSHOT
 
 eventuateCommonImageVersion=0.8.0.RELEASE
