--- a/customer-service/src/main/resources/application.yml
+++ b/customer-service/src/main/resources/application.yml
@@ -8,6 +8,19 @@ datasources:
     password: ${DB_PASSWORD}
     schema-generate: CREATE_DROP
     dialect: POSTGRES
+    maxActive: 2
+    maxIdle: 2
+    minIdle: 0
+    initialSize: 2
+jpa:
+  default:
+    packages-to-scan:
+      - 'io.eventuate.examples.tram.ordersandcustomers.customers.domain'
+    properties:
+      hibernate:
+        hbm2ddl:
+          auto: update
+        show_sql: true
 endpoints:
   health:
     enabled: true
