--- a/end-to-end-tests/build.gradle
+++ b/end-to-end-tests/build.gradle
@@ -1,4 +1,12 @@
+plugins {
+    id "io.spring.dependency-management"
+}
+
 dependencies {
+    implementation platform("io.micronaut:micronaut-bom:$micronautVersion")
+    annotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
+    testAnnotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
+
     compile project(":order-history-common")
     compile project(":customer-web-api")
     compile project(":order-web-api")
@@ -6,6 +14,22 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
 
     testCompile "io.eventuate.util:eventuate-util-test:$eventuateUtilVersion"
-    testCompile "org.springframework.boot:spring-boot-starter-test:${springBootVersion}"
+
+    annotationProcessor "io.micronaut:micronaut-inject-java"
+    annotationProcessor "io.micronaut:micronaut-validation"
+    annotationProcessor "io.micronaut.configuration:micronaut-openapi"
+    compile "io.micronaut:micronaut-inject"
+    compile "io.micronaut:micronaut-validation"
+    compile "io.micronaut:micronaut-runtime"
+
+    testCompile "io.micronaut:micronaut-http-server-netty"
+    testAnnotationProcessor "io.micronaut:micronaut-inject-java"
+    testCompile "org.junit.jupiter:junit-jupiter-api"
+    testCompile "io.micronaut.test:micronaut-test-junit5"
+    testRuntime "org.junit.jupiter:junit-jupiter-engine"
 }
 
+// use JUnit 5 platform
+test {
+    useJUnitPlatform()
+}
