--- a/order-history-service/src/main/resources/META-INF/native-image/customer.service/customer-service/native-image.properties
+++ b/order-history-service/src/main/resources/META-INF/native-image/customer.service/customer-service/native-image.properties
@@ -1,6 +1,9 @@
 Args = -H:+TraceClassInitialization \
     -H:+ReportExceptionStackTraces \
+    -H:Log=registerResource \
     -H:IncludeResources=application.yml \
+    -H:IncludeResources=META-INF/swagger/.*$ \
+    -H:IncludeResources=META-INF/swagger-ui/.*$ \
     -H:Name=order-history-service-executable \
     -H:ReflectionConfigurationFiles=reflection \
     -H:Class=io.eventuate.examples.tram.ordersandcustomers.orderhistoryservice.OrderHistoryServiceMain \
