--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,8 @@ deployUrl=file:///Users/cer/.m2/testdeploy
 
 eventuateMavenRepoUrl=https://dl.bintray.com/eventuateio-oss/eventuate-maven-release/,https://dl.bintray.com/eventuateio-oss/eventuate-maven-milestone,file:///Users/cer/.m2/testdeploy,https://dl.bintray.com/eventuateio-oss/eventuate-maven-rc
 
+dockerComposePluginVersion=0.4.5
+
 springBootVersion=2.1.5.RELEASE
 
 micronautDataVersion=1.0.0.M3
@@ -11,11 +13,11 @@ micronautVersion=1.2.4
 
 eventuateTramVersion=0.23.0.MICRONAUT.M5
 eventuateUtilVersion=0.3.0.RELEASE
-dockerComposePluginVersion=0.4.5
-eventuateTramMessagingHttpVersion=0.1.0.RELEASE
+eventuateTramMessagingHttpVersion=0.1.1.RELEASE
 eventuateCommonVersion=0.8.0.MICRONAUT.M4
-version=0.1.0-SNAPSHOT
 
-eventuateCommonImageVersion=0.8.0.RELEASE
+eventuateCommonImageVersion=0.8.0.MICRONAUT.M4
 eventuateMessagingKafkaImageVersion=0.3.0.RELEASE
 eventuateCdcImageVersion=0.5.0.RELEASE
+
+version=0.1.0-SNAPSHOT
