--- a/gradle.properties
+++ b/gradle.properties
@@ -11,10 +11,10 @@ springBootVersion=2.1.5.RELEASE
 micronautDataVersion=1.0.0.M3
 micronautVersion=1.2.4
 
-eventuateTramVersion=0.23.0.MICRONAUT.M5
+eventuateTramVersion=0.22.0-SNAPSHOT
 eventuateUtilVersion=0.3.0.RELEASE
-eventuateTramMessagingHttpVersion=0.1.1.RELEASE
-eventuateCommonVersion=0.8.0.MICRONAUT.M4
+eventuateTramMessagingHttpVersion=0.1.0-SNAPSHOT
+eventuateCommonVersion=0.8.3-SNAPSHOT
 
 eventuateCommonImageVersion=0.8.0.MICRONAUT.M4
 eventuateMessagingKafkaImageVersion=0.3.0.RELEASE
