--- a/gradle.properties
+++ b/gradle.properties
@@ -11,13 +11,13 @@ springBootVersion=2.1.5.RELEASE
 micronautDataVersion=1.0.0.M3
 micronautVersion=1.2.4
 
-eventuateTramVersion=0.22.0-SNAPSHOT
+eventuateTramVersion=0.23.0.MICRONAUT.M8
 eventuateUtilVersion=0.3.0.RELEASE
-eventuateTramMessagingHttpVersion=0.1.0-SNAPSHOT
-eventuateCommonVersion=0.8.3-SNAPSHOT
+eventuateTramMessagingHttpVersion=0.1.1.RELEASE
+eventuateCommonVersion=0.8.0.MICRONAUT.M6
 
-eventuateCommonImageVersion=0.8.0.MICRONAUT.M4
-eventuateMessagingKafkaImageVersion=0.3.0.RELEASE
-eventuateCdcImageVersion=0.5.0.RELEASE
+eventuateCommonImageVersion=0.8.0.MICRONAUT.M6
+eventuateMessagingKafkaImageVersion=0.3.0.MICRONAUT.M6
+eventuateCdcImageVersion=0.6.0.RC2
 
 version=0.1.0-SNAPSHOT
