Docker images is downgraded, because build fails with newest versions. See #10

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,8 @@ eventuateUtilVersion=0.3.0.RELEASE
 eventuateTramMessagingHttpVersion=0.1.1.RELEASE
 eventuateCommonVersion=0.8.0.MICRONAUT.M6
 
-eventuateCommonImageVersion=0.8.0.MICRONAUT.M6
-eventuateMessagingKafkaImageVersion=0.3.0.MICRONAUT.M6
-eventuateCdcImageVersion=0.6.0.RC2
+eventuateCommonImageVersion=0.8.0.MICRONAUT.M4
+eventuateMessagingKafkaImageVersion=0.3.0.RELEASE
+eventuateCdcImageVersion=0.5.0.RELEASE
 
 version=0.1.0-SNAPSHOT
