Replaced test kafka image by released version

--- a/docker-compose-postgres-polling.yml
+++ b/docker-compose-postgres-polling.yml
@@ -70,7 +70,7 @@ services:
       - 2181:2181
 
   kafka:
-    image: test-eventuate-kafka
+    image: eventuateio/eventuate-kafka:$EVENTUATE_KAFKA_VERSION
     ports:
       - 9092:9092
     depends_on:
