Updated docker images to latest micronaut versions. Increased EVENTUATELOCAL_CDC_MAX_EVENT_INTERVAL_TO_ASSUME_READER_HEALTHY to prevent cdc fails during long builds.

--- a/docker-compose-postgres-polling.yml
+++ b/docker-compose-postgres-polling.yml
@@ -122,7 +122,7 @@ services:
       EVENTUATELOCAL_CDC_POLLING_RETRY_INTERVAL_IN_MILLISECONDS: 500
       EVENTUATELOCAL_CDC_READER_NAME: PostgresPollingReader
       SPRING_PROFILES_ACTIVE: EventuatePolling
-
+      EVENTUATELOCAL_CDC_MAX_EVENT_INTERVAL_TO_ASSUME_READER_HEALTHY: 3600000
 
   proxy:
     image: eventuateio/eventuate-tram-http-proxy-service:$EVENTUATE_PROXY_SERVICE_IMAGE
