Increased EVENTUATELOCAL_CDC_MAX_EVENT_INTERVAL_TO_ASSUME_READER_HEALTHY to prevent cdc fails during long builds.

--- a/docker-compose-mysql-binlog.yml
+++ b/docker-compose-mysql-binlog.yml
@@ -110,3 +110,4 @@ services:
       EVENTUATELOCAL_CDC_OFFSET_STORE_KEY: MySqlBinlog
       EVENTUATELOCAL_CDC_MYSQL_BINLOG_CLIENT_UNIQUE_ID: 1234567890
       EVENTUATELOCAL_CDC_READ_OLD_DEBEZIUM_DB_OFFSET_STORAGE_TOPIC: "false"
+      EVENTUATELOCAL_CDC_MAX_EVENT_INTERVAL_TO_ASSUME_READER_HEALTHY: 3600000
