--- a/docker-compose-postgres-polling.yml
+++ b/docker-compose-postgres-polling.yml
@@ -110,3 +110,4 @@ services:
       EVENTUATELOCAL_CDC_POLLING_RETRY_INTERVAL_IN_MILLISECONDS: 500
       EVENTUATELOCAL_CDC_READER_NAME: PostgresPollingReader
       SPRING_PROFILES_ACTIVE: EventuatePolling
+      EVENTUATELOCAL_CDC_MAX_EVENT_INTERVAL_TO_ASSUME_READER_HEALTHY: 3600000
