--- a/docker-compose-postgres-wal.yml
+++ b/docker-compose-postgres-wal.yml
@@ -105,3 +105,4 @@ services:
       EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
       EVENTUATELOCAL_CDC_READER_NAME: PostgresWalReader
       SPRING_PROFILES_ACTIVE: PostgresWal
+      EVENTUATELOCAL_CDC_MAX_EVENT_INTERVAL_TO_ASSUME_READER_HEALTHY: 3600000
