#15. Found library which solves the issue.

--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -4,8 +4,9 @@ COPY reflection .
 RUN gu install native-image
 RUN native-image -cp ./order-service-0.1-all.jar
 
-FROM gcc:9.2.0
-RUN apt-get install curl
+FROM frolvlad/alpine-glibc:glibc-2.30
+RUN apk add --no-cache gcc musl-dev
+RUN apk add curl
 COPY --from=0 /order-service-executable .
 CMD ./order-service-executable
 HEALTHCHECK --start-period=30s --interval=5s CMD curl -f http://localhost:8080/health || exit 1
