--- a/gradle.properties
+++ b/gradle.properties
@@ -6,12 +6,12 @@ eventuateMavenRepoUrl=https://dl.bintray.com/eventuateio-oss/eventuate-maven-rel
 
 springBootVersion=2.1.5.RELEASE
 
-eventuateTramVersion=0.23.0.MICRONAUT.M8
+eventuateTramVersion=0.22.0-SNAPSHOT
 eventuateUtilVersion=0.3.0.RELEASE
 dockerComposePluginVersion=0.4.5
-eventuateMessagingKafkaVersion=0.3.0.MICRONAUT.M6
+eventuateMessagingKafkaVersion=0.5.0-SNAPSHOT
 version=0.1.0-SNAPSHOT
 
-eventuateCommonImageVersion=0.8.0.MICRONAUT.M6
-eventuateMessagingKafkaImageVersion=0.3.0.MICRONAUT.M6
+eventuateCommonImageVersion=0.9.0.RC3
+eventuateMessagingKafkaImageVersion=0.9.0.RC2
 eventuateCdcImageVersion=0.6.0.RC3
