--- a/gradle.properties
+++ b/gradle.properties
@@ -6,12 +6,12 @@ eventuateMavenRepoUrl=https://dl.bintray.com/eventuateio-oss/eventuate-maven-rel
 
 springBootVersion=2.1.5.RELEASE
 
-eventuateTramVersion=0.22.0-SNAPSHOT
+eventuateTramVersion=0.24.0.RC4
 eventuateUtilVersion=0.3.0.RELEASE
 dockerComposePluginVersion=0.4.5
-eventuateMessagingKafkaVersion=0.5.0-SNAPSHOT
+eventuateMessagingKafkaVersion=0.9.0.RC4
 version=0.1.0-SNAPSHOT
 
-eventuateCommonImageVersion=0.9.0.RC3
-eventuateMessagingKafkaImageVersion=0.9.0.RC2
+eventuateCommonImageVersion=0.9.0.RC4
+eventuateMessagingKafkaImageVersion=0.9.0.RC4
 eventuateCdcImageVersion=0.6.0.RC3
