--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ eventuateMavenRepoUrl=https://dl.bintray.com/eventuateio-oss/eventuate-maven-rel
 
 springBootVersion=2.1.5.RELEASE
 
-eventuateTramVersion=0.24.0.RC4
+eventuateTramVersion=0.24.0-SNAPSHOT
 eventuateUtilVersion=0.3.0.RELEASE
 dockerComposePluginVersion=0.4.5
 eventuateMessagingKafkaVersion=0.9.0.RC4
