--- a/gradle.properties
+++ b/gradle.properties
@@ -2,11 +2,11 @@ org.gradle.jvmargs=-XX:MaxPermSize=512m
 
 deployUrl=file:///Users/cer/.m2/testdeploy
 
-eventuateMavenRepoUrl=https://dl.bintray.com/eventuateio-oss/eventuate-maven-release/,https://dl.bintray.com/eventuateio-oss/eventuate-maven-milestone,file:///Users/cer/.m2/testdeploy,https://dl.bintray.com/eventuateio-oss/eventuate-maven-rc
+eventuateMavenRepoUrl=https://dl.bintray.com/eventuateio-oss/eventuate-maven-release/,https://dl.bintray.com/eventuateio-oss/eventuate-maven-milestone,file:///Users/cer/.m2/testdeploy,https://dl.bintray.com/eventuateio-oss/eventuate-maven-rc,https://snapshots.repositories.eventuate.io/repository
 
 springBootVersion=2.1.5.RELEASE
 
-eventuateTramVersion=0.24.0-SNAPSHOT
+eventuateTramVersion=0.24.0.BUILD-SNAPSHOT
 eventuateUtilVersion=0.3.0.RELEASE
 dockerComposePluginVersion=0.4.5
 eventuateMessagingKafkaVersion=0.9.0.RC4
