--- a/order-backend/build.gradle
+++ b/order-backend/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile project(":common")
 
     compile "io.eventuate.tram.core:eventuate-tram-micronaut-jdbc-kafka:$eventuateTramVersion"
+    compile "io.eventuate.tram.core:eventuate-tram-micronaut-spring-jdbc-optimistic-locking:$eventuateTramVersion"
 
     compile "io.micronaut:micronaut-spring"
 
