--- a/docker-compose-postgres-polling.yml
+++ b/docker-compose-postgres-polling.yml
@@ -12,12 +12,11 @@ services:
       - zookeeper
       - cdcservice
     environment:
-      DB_URL: jdbc:postgresql://postgres/eventuate
-      DB_USERNAME: eventuate
-      DB_PASSWORD: eventuate
-      DB_DRIVERCLASSNAME: org.postgresql.Driver
-      EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-      EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
+      POSTGRES: postgres
+      KAFKA: kafka
+      KAFKA_PORT: 29092
+      ZOOKEEPER: zookeeper
+      MICRONAUT_ENVIRONMENTS: postgres
 
   customerservice:
     build: ./customer-service/
@@ -31,12 +30,11 @@ services:
       - zookeeper
       - cdcservice
     environment:
-      DB_URL: jdbc:postgresql://postgres/eventuate
-      DB_USERNAME: eventuate
-      DB_PASSWORD: eventuate
-      DB_DRIVERCLASSNAME: org.postgresql.Driver
-      EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-      EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
+      POSTGRES: postgres
+      KAFKA: kafka
+      KAFKA_PORT: 29092
+      ZOOKEEPER: zookeeper
+      MICRONAUT_ENVIRONMENTS: postgres
 
   orderhistoryservice:
     build: ./order-history-service/
@@ -48,27 +46,32 @@ services:
       - kafka
       - zookeeper
     environment:
-      SPRING_DATA_MONGODB_URI: mongodb://mongodb/customers_and_orders
-      EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-      EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
+      MONGODB: mongodb
+      KAFKA: kafka
+      KAFKA_PORT: 29092
+      ZOOKEEPER: zookeeper
 
   zookeeper:
-    image: eventuateio/eventuate-zookeeper:$EVENTUATE_COMMON_VERSION
+    image: confluentinc/cp-zookeeper:5.2.4
     ports:
       - 2181:2181
-
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
 
   kafka:
-    image: eventuateio/eventuate-kafka:$EVENTUATE_KAFKA_VERSION
+    image: "confluentinc/cp-enterprise-kafka:5.2.4"
     ports:
       - 9092:9092
+      - 29092:29092
     depends_on:
       - zookeeper
     environment:
-      - ADVERTISED_HOST_NAME=${DOCKER_HOST_IP}
-      - KAFKA_HEAP_OPTS=-Xmx320m -Xms320m
-      - ZOOKEEPER_SERVERS=zookeeper:2181
-      - ZOOKEEPER_CONNECTION_TIMEOUT_MS=60000
+      KAFKA_LISTENERS: LC://kafka:29092,LX://kafka:9092
+      KAFKA_ADVERTISED_LISTENERS: LC://kafka:29092,LX://${DOCKER_HOST_IP:-localhost}:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LC:PLAINTEXT,LX:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: LC
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
 
   postgres:
@@ -102,7 +105,7 @@ services:
       SPRING_DATASOURCE_TEST_ON_BORROW: "true"
       SPRING_DATASOURCE_VALIDATION_QUERY: SELECT 1
       SPRING_DATASOURCE_DRIVER_CLASS_NAME: org.postgresql.Driver
-      EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:29092
       EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
       EVENTUATELOCAL_CDC_POLLING_INTERVAL_IN_MILLISECONDS: 500
       EVENTUATELOCAL_CDC_MAX_EVENTS_PER_POLLING: 1000
