--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
             - eventuate-tram-examples-micronaut-customers-and-orders-{{ checksum "gradle.properties" }}
             - eventuate-tram-examples-micronaut-customers-and-orders-
       - run:
+          command: ./.circleci/upgrade-docker-compose.sh
+      - run:
           command: |
             . ./.circleci/setenv-circle-ci.sh
             ./gradlew testClasses
