--- a/docker-compose-mysql-binlog.yml
+++ b/docker-compose-mysql-binlog.yml
@@ -12,12 +12,10 @@ services:
       - zookeeper
       - cdcservice
     environment:
-      DB_URL: jdbc:mysql://mysql/eventuate
-      DB_DRIVERCLASSNAME: com.mysql.jdbc.Driver
-      DB_USERNAME: mysqluser
-      DB_PASSWORD: mysqlpw
-      EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-      EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
+      MYSQL: mysql
+      KAFKA: kafka
+      KAFKA_PORT: 29092
+      ZOOKEEPER: zookeeper
 
   customerservice:
     build:
@@ -31,12 +29,10 @@ services:
       - zookeeper
       - cdcservice
     environment:
-      DB_URL: jdbc:mysql://mysql/eventuate
-      DB_DRIVERCLASSNAME: com.mysql.jdbc.Driver
-      DB_USERNAME: mysqluser
-      DB_PASSWORD: mysqlpw
-      EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-      EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
+      MYSQL: mysql
+      KAFKA: kafka
+      KAFKA_PORT: 29092
+      ZOOKEEPER: zookeeper
 
   orderhistoryservice:
     build:
@@ -50,27 +46,32 @@ services:
       - kafka
       - zookeeper
     environment:
-      SPRING_DATA_MONGODB_URI: mongodb://mongodb/customers_and_orders
-      EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-      EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
+      MONGODB: mongodb
+      KAFKA: kafka
+      KAFKA_PORT: 29092
+      ZOOKEEPER: zookeeper
 
   zookeeper:
-    image: eventuateio/eventuate-zookeeper:$EVENTUATE_COMMON_VERSION
+    image: confluentinc/cp-zookeeper:5.2.4
     ports:
       - 2181:2181
-
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
 
   kafka:
-    image: eventuateio/eventuate-kafka:$EVENTUATE_KAFKA_VERSION
+    image: "confluentinc/cp-enterprise-kafka:5.2.4"
     ports:
       - 9092:9092
+      - 29092:29092
     depends_on:
       - zookeeper
     environment:
-      - ADVERTISED_HOST_NAME=${DOCKER_HOST_IP}
-      - KAFKA_HEAP_OPTS=-Xmx320m -Xms320m
-      - ZOOKEEPER_SERVERS=zookeeper:2181
-      - ZOOKEEPER_CONNECTION_TIMEOUT_MS=60000
+      KAFKA_LISTENERS: LC://kafka:29092,LX://kafka:9092
+      KAFKA_ADVERTISED_LISTENERS: LC://kafka:29092,LX://${DOCKER_HOST_IP:-localhost}:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LC:PLAINTEXT,LX:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: LC
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
   mysql:
     image: eventuateio/eventuate-mysql:$EVENTUATE_COMMON_VERSION
@@ -102,7 +103,7 @@ services:
       SPRING_DATASOURCE_USERNAME: mysqluser
       SPRING_DATASOURCE_PASSWORD: mysqlpw
       SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.jdbc.Driver
-      EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
+      EVENTUATELOCAL_KAFKA_BOOTSTRAP_SERVERS: kafka:29092
       EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
       EVENTUATELOCAL_CDC_DB_USER_NAME: root
       EVENTUATELOCAL_CDC_DB_PASSWORD: rootpassword
