--- a/gradle.properties
+++ b/gradle.properties
@@ -6,12 +6,12 @@ eventuateMavenRepoUrl=https://dl.bintray.com/eventuateio-oss/eventuate-maven-rel
 
 springBootVersion=2.1.5.RELEASE
 
-eventuateTramVersion=0.24.0.BUILD-SNAPSHOT
-eventuateUtilVersion=0.3.0.RELEASE
+eventuateTramVersion=0.24.0.RELEASE
+eventuateUtilVersion=0.4.0.RELEASE
 dockerComposePluginVersion=0.4.5
-eventuateMessagingKafkaVersion=0.9.0.RC4
+eventuateMessagingKafkaVersion=0.9.0.RELEASE
 version=0.1.0-SNAPSHOT
 
-eventuateCommonImageVersion=0.9.0.RC4
-eventuateMessagingKafkaImageVersion=0.9.0.RC4
-eventuateCdcImageVersion=0.6.0.RC3
+eventuateCommonImageVersion=0.9.0.RELEASE
+eventuateMessagingKafkaImageVersion=0.9.0.RELEASE
+eventuateCdcImageVersion=0.6.0.RELEASE
