--- a/docker-compose-mysql-binlog.yml
+++ b/docker-compose-mysql-binlog.yml
@@ -16,6 +16,7 @@ services:
       KAFKA: kafka
       KAFKA_PORT: 29092
       ZOOKEEPER: zookeeper
+      JAVA_OPTS: -Xmx32m
 
   customerservice:
     build:
@@ -33,6 +34,7 @@ services:
       KAFKA: kafka
       KAFKA_PORT: 29092
       ZOOKEEPER: zookeeper
+      JAVA_OPTS: -Xmx32m
 
   orderhistoryservice:
     build:
@@ -50,6 +52,7 @@ services:
       KAFKA: kafka
       KAFKA_PORT: 29092
       ZOOKEEPER: zookeeper
+      JAVA_OPTS: -Xmx32m
 
   zookeeper:
     image: confluentinc/cp-zookeeper:5.2.4
@@ -57,6 +60,7 @@ services:
       - 2181:2181
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+      KAFKA_HEAP_OPTS: -Xmx64m
 
   kafka:
     image: "confluentinc/cp-enterprise-kafka:5.2.4"
@@ -72,6 +76,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: LC
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_HEAP_OPTS: -Xmx192m
 
   mysql:
     image: eventuateio/eventuate-mysql:$EVENTUATE_COMMON_VERSION
@@ -111,3 +116,4 @@ services:
       EVENTUATELOCAL_CDC_OFFSET_STORE_KEY: MySqlBinlog
       EVENTUATELOCAL_CDC_MYSQL_BINLOG_CLIENT_UNIQUE_ID: 1234567890
       EVENTUATELOCAL_CDC_READ_OLD_DEBEZIUM_DB_OFFSET_STORAGE_TOPIC: "false"
+      JAVA_OPTS: -Xmx64m
