--- a/docker-compose-postgres-wal.yml
+++ b/docker-compose-postgres-wal.yml
@@ -17,6 +17,7 @@ services:
       KAFKA_PORT: 29092
       ZOOKEEPER: zookeeper
       MICRONAUT_ENVIRONMENTS: postgres
+      JAVA_OPTS: -Xmx32m
 
   customerservice:
     build: ./customer-service/
@@ -35,6 +36,7 @@ services:
       KAFKA_PORT: 29092
       ZOOKEEPER: zookeeper
       MICRONAUT_ENVIRONMENTS: postgres
+      JAVA_OPTS: -Xmx32m
 
   orderhistoryservice:
     build: ./order-history-service/
@@ -50,6 +52,7 @@ services:
       KAFKA: kafka
       KAFKA_PORT: 29092
       ZOOKEEPER: zookeeper
+      JAVA_OPTS: -Xmx32m
 
   zookeeper:
     image: confluentinc/cp-zookeeper:5.2.4
@@ -57,6 +60,7 @@ services:
       - 2181:2181
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+      KAFKA_HEAP_OPTS: -Xmx64m
 
   kafka:
     image: "confluentinc/cp-enterprise-kafka:5.2.4"
@@ -72,6 +76,7 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: LC
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_HEAP_OPTS: -Xmx192m
 
   postgres:
     image: eventuateio/eventuate-postgres:$EVENTUATE_COMMON_VERSION
@@ -108,3 +113,4 @@ services:
       EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
       EVENTUATELOCAL_CDC_READER_NAME: PostgresWalReader
       SPRING_PROFILES_ACTIVE: PostgresWal
+      JAVA_OPTS: -Xmx64m
