--- a/docker-compose-mysql-binlog.yml
+++ b/docker-compose-mysql-binlog.yml
@@ -3,6 +3,8 @@ services:
   orderservice:
     build:
       context: ./order-service/
+      args:
+        baseImageVersion: ${EVENTUATE_JAVA_BASE_IMAGE_VERSION?}
     image: eventuateexamples/eventuate-tram-examples-micronaut-customers-and-orders-order-service
     ports:
       - "8081:8080"
@@ -21,6 +23,8 @@ services:
   customerservice:
     build:
       context: ./customer-service/
+      args:
+        baseImageVersion: ${EVENTUATE_JAVA_BASE_IMAGE_VERSION?}
     image: eventuateexamples/eventuate-tram-examples-micronaut-customers-and-orders-customer-service
     ports:
       - "8082:8080"
@@ -39,6 +43,8 @@ services:
   orderhistoryservice:
     build:
       context: ./order-history-service/
+      args:
+        baseImageVersion: ${EVENTUATE_JAVA_BASE_IMAGE_VERSION?}
     image: eventuateexamples/eventuate-tram-examples-micronaut-customers-and-orders-order-history-service
     ports:
       - "8083:8080"
