--- a/docker-compose-postgres-wal.yml
+++ b/docker-compose-postgres-wal.yml
@@ -1,7 +1,10 @@
 version: '3'
 services:
   orderservice:
-    build: ./order-service/
+    build:
+      context: ./order-service/
+      args:
+        baseImageVersion: ${EVENTUATE_JAVA_BASE_IMAGE_VERSION?}
     ports:
       - "8081:8080"
     volumes:
@@ -20,7 +23,10 @@ services:
       JAVA_OPTS: -Xmx32m
 
   customerservice:
-    build: ./customer-service/
+    build:
+      context: ./customer-service/
+      args:
+        baseImageVersion: ${EVENTUATE_JAVA_BASE_IMAGE_VERSION?}
     ports:
       - "8082:8080"
     volumes:
@@ -39,7 +45,10 @@ services:
       JAVA_OPTS: -Xmx32m
 
   orderhistoryservice:
-    build: ./order-history-service/
+    build:
+      context: ./order-history-service/
+      args:
+        baseImageVersion: ${EVENTUATE_JAVA_BASE_IMAGE_VERSION?}
     ports:
       - "8083:8080"
     depends_on:
