--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,5 @@ version=0.1.0-SNAPSHOT
 eventuateCommonImageVersion=0.10.0.RELEASE
 eventuateMessagingKafkaImageVersion=0.10.0.RELEASE
 eventuateCdcImageVersion=0.7.0.RELEASE
+
+eventuateExamplesBaseImageVersion=BUILD-6
