--- a/customer-service/build.gradle
+++ b/customer-service/build.gradle
@@ -17,12 +17,21 @@ dependencyManagement {
 }
 
 dependencies {
-    compile project(":customer-backend")
-    compile project(":customer-web-api")
+    compile project(":common")
+    compile project(":customer-service-api-web")
+    compile project(":customer-service-api-events")
+    compile project(":order-service-api-events")
+
+    compile "io.eventuate.tram.core:eventuate-tram-micronaut-jdbc-kafka:$eventuateTramVersion"
+    compile "io.eventuate.tram.core:eventuate-tram-micronaut-spring-jdbc-optimistic-locking:$eventuateTramVersion"
 
     annotationProcessor "javax.persistence:javax.persistence-api:2.2"
     annotationProcessor "io.micronaut:micronaut-inject-java"
     annotationProcessor "io.micronaut:micronaut-validation"
+    annotationProcessor "io.micronaut.configuration:micronaut-openapi"
+    compile "io.micronaut:micronaut-spring"
+    compile "io.micronaut.configuration:micronaut-hibernate-jpa"
+    compile 'io.micronaut.configuration:micronaut-jdbc-hikari'
     compile "io.micronaut:micronaut-inject"
     compile "io.micronaut:micronaut-validation"
     compile "io.micronaut:micronaut-runtime"
@@ -30,9 +39,13 @@ dependencies {
     compile 'io.micronaut:micronaut-management'
     runtime "ch.qos.logback:logback-classic:1.2.3"
 
-    annotationProcessor "io.micronaut.configuration:micronaut-openapi"
     compile "io.swagger.core.v3:swagger-annotations"
     compile "io.eventuate.util:eventuate-util-swagger-ui:$eventuateUtilVersion"
+
+    runtime 'mysql:mysql-connector-java:5.1.36'
+    runtime ('org.postgresql:postgresql:9.4-1200-jdbc41') {
+        exclude group: "org.slf4j", module: "slf4j-simple"
+    }
 }
 
 mainClassName = "io.eventuate.examples.tram.ordersandcustomers.customers.CustomerServiceMain"
