--- a/docker-compose-postgres-polling.yml
+++ b/docker-compose-postgres-polling.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  orderservice:
+  order-service:
     build:
       context: ./order-service/
       args:
@@ -13,7 +13,7 @@ services:
       - postgres
       - kafka
       - zookeeper
-      - cdcservice
+      - cdc-service
     environment:
       POSTGRES: postgres
       KAFKA: kafka
@@ -22,7 +22,7 @@ services:
       MICRONAUT_ENVIRONMENTS: postgres
       JAVA_OPTS: -Xmx32m
 
-  customerservice:
+  customer-service:
     build:
       context: ./customer-service/
       args:
@@ -35,7 +35,7 @@ services:
       - postgres
       - kafka
       - zookeeper
-      - cdcservice
+      - cdc-service
     environment:
       POSTGRES: postgres
       KAFKA: kafka
@@ -44,7 +44,7 @@ services:
       MICRONAUT_ENVIRONMENTS: postgres
       JAVA_OPTS: -Xmx32m
 
-  orderhistoryservice:
+  order-history-service:
     build:
       context: ./order-history-service/
       args:
@@ -53,9 +53,9 @@ services:
       - "8083:8080"
     depends_on:
       - mongodb
-      - postgres
       - kafka
       - zookeeper
+      - cdc-service
     environment:
       MONGODB: mongodb
       KAFKA: kafka
@@ -104,7 +104,7 @@ services:
     ports:
       - "27017:27017"
 
-  cdcservice:
+  cdc-service:
     image: eventuateio/eventuate-cdc-service:$EVENTUATE_CDC_VERSION
     ports:
       - "8099:8080"
