--- a/end-to-end-tests/build.gradle
+++ b/end-to-end-tests/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
-    compile project(":order-history-common")
-    compile project(":customer-web-api")
-    compile project(":order-web-api")
+    compile project(":order-history-service-common")
+    compile project(":customer-service-api-web")
+    compile project(":order-service-api-web")
 
     compile "org.springframework.boot:spring-boot-starter-web:$springBootVersion"
 
