--- a/order-history-service/build.gradle
+++ b/order-history-service/build.gradle
@@ -10,6 +10,14 @@ repositories {
     maven { url "https://jcenter.bintray.com" }
 }
 
+apply plugin: 'docker-compose'
+
+dockerCompose.isRequiredBy(test)
+
+dockerCompose {
+    useComposeFiles = ['docker-compose-integration-tests.yml']
+}
+
 dependencyManagement {
     imports {
         mavenBom 'io.micronaut:micronaut-bom:1.1.3'
@@ -17,11 +25,20 @@ dependencyManagement {
 }
 
 dependencies {
-    compile project(":order-history-backend")
+    compile project(":customer-service-api-events")
+    compile project(":order-service-api-events")
+    compile project(":order-history-service-common")
 
+    compile "io.eventuate.tram.core:eventuate-tram-micronaut-consumer-kafka:$eventuateTramVersion"
+
+    compile "org.mongodb:mongo-java-driver"
+    compile 'io.micronaut.configuration:micronaut-mongo-reactive'
+
+    compile "io.micronaut:micronaut-spring"
     annotationProcessor "javax.persistence:javax.persistence-api:2.2"
     annotationProcessor "io.micronaut:micronaut-inject-java"
     annotationProcessor "io.micronaut:micronaut-validation"
+    annotationProcessor "io.micronaut.configuration:micronaut-openapi"
     compile "io.micronaut:micronaut-inject"
     compile "io.micronaut:micronaut-validation"
     compile "io.micronaut:micronaut-runtime"
@@ -29,9 +46,12 @@ dependencies {
     compile 'io.micronaut:micronaut-management'
     runtime "ch.qos.logback:logback-classic:1.2.3"
 
-    annotationProcessor "io.micronaut.configuration:micronaut-openapi"
     compile "io.swagger.core.v3:swagger-annotations"
     compile "io.eventuate.util:eventuate-util-swagger-ui:$eventuateUtilVersion"
+
+    testCompile "org.junit.jupiter:junit-jupiter-api"
+    testCompile "io.micronaut.test:micronaut-test-junit5"
+    testRuntime "org.junit.jupiter:junit-jupiter-engine"
 }
 
 mainClassName = "io.eventuate.examples.tram.ordersandcustomers.orderhistoryservice.OrderHistoryServiceMain"
