--- a/settings.gradle
+++ b/settings.gradle
@@ -1,12 +1,11 @@
 include 'common'
-include 'customer-backend'
-include 'customer-web-api'
+include 'customer-service-api-web'
+include 'customer-service-api-events'
 include 'customer-service'
-include 'order-backend'
-include 'order-web-api'
+include 'order-service-api-events'
+include 'order-service-api-web'
 include 'order-service'
-include 'order-history-common'
+include 'order-history-service-common'
 include 'order-history-service'
-include 'order-history-backend'
 include 'end-to-end-tests'
 
