--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ eventuateMavenRepoUrl=https://dl.bintray.com/eventuateio-oss/eventuate-maven-rel
 
 springBootVersion=2.1.5.RELEASE
 
+eventuateExamplesBaseImageVersion=BUILD-6
 eventuateTramVersion=0.27.0.BUILD-SNAPSHOT
 eventuateUtilVersion=0.8.0.BUILD-SNAPSHOT
 dockerComposePluginVersion=0.4.5
@@ -13,5 +14,4 @@ eventuateMessagingKafkaVersion=0.13.0.BUILD-SNAPSHOT
 version=0.1.0-SNAPSHOT
 
 eventuateCommonImageVersion=0.13.0.BUILD-SNAPSHOT
-eventuateMessagingKafkaImageVersion=0.13.0.BUILD-SNAPSHOT
 eventuateCdcImageVersion=0.10.0.BUILD-SNAPSHOT
