--- a/docker-compose-postgres-polling.yml
+++ b/docker-compose-postgres-polling.yml
@@ -121,4 +121,5 @@ services:
       EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
       EVENTUATELOCAL_CDC_READER_NAME: PostgresPollingReader
       SPRING_PROFILES_ACTIVE: EventuatePolling
+      EVENTUATE_OUTBOX_ID: 1
       JAVA_OPTS: -Xmx64m
