--- a/docker-compose-postgres-wal.yml
+++ b/docker-compose-postgres-wal.yml
@@ -120,4 +120,5 @@ services:
       EVENTUATELOCAL_ZOOKEEPER_CONNECTION_STRING: zookeeper:2181
       EVENTUATELOCAL_CDC_READER_NAME: PostgresWalReader
       SPRING_PROFILES_ACTIVE: PostgresWal
+      EVENTUATE_OUTBOX_ID: 1
       JAVA_OPTS: -Xmx64m
