--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ eventuateMavenRepoUrl=https://dl.bintray.com/eventuateio-oss/eventuate-maven-rel
 springBootVersion=2.1.5.RELEASE
 
 eventuateExamplesBaseImageVersion=BUILD-6
-eventuateTramVersion=0.27.0.BUILD-SNAPSHOT
+eventuatePlatformVersion=2020.4.BUILD-SNAPSHOT
 eventuateUtilVersion=0.8.0.BUILD-SNAPSHOT
 dockerComposePluginVersion=0.4.5
 eventuateMessagingKafkaVersion=0.13.0.BUILD-SNAPSHOT
