--- a/customer-service/build.gradle
+++ b/customer-service/build.gradle
@@ -22,8 +22,8 @@ dependencies {
     compile project(":customer-service-api-events")
     compile project(":order-service-api-events")
 
-    compile "io.eventuate.tram.core:eventuate-tram-micronaut-jdbc-kafka:$eventuateTramVersion"
-    compile "io.eventuate.tram.core:eventuate-tram-micronaut-spring-jdbc-optimistic-locking:$eventuateTramVersion"
+    compile "io.eventuate.tram.core:eventuate-tram-micronaut-jdbc-kafka"
+    compile "io.eventuate.tram.core:eventuate-tram-micronaut-spring-jdbc-optimistic-locking"
 
     annotationProcessor "javax.persistence:javax.persistence-api:2.2"
     annotationProcessor "io.micronaut:micronaut-inject-java"
