Updated micronaut version, see https://github.com/eventuate-foundation/eventuate-common/issues/81 #28: Upserts to mongodb some time fail. Fixed, added test.

--- a/build.gradle
+++ b/build.gradle
@@ -48,10 +48,10 @@ dockerCompose {
         useComposeFiles = ["docker-compose-mysql-binlog.yml"]
     }
 
-    mysqlbinlogcdc {
+    mysqlbinloginfrastructure {
         projectName = null
         useComposeFiles = ["docker-compose-mysql-binlog.yml"]
-        startedServices = ["cdc-service"]
+        startedServices = ["cdc-service", "mongodb"]
     }
 
     postgrespolling {
@@ -59,10 +59,10 @@ dockerCompose {
         useComposeFiles = ["docker-compose-postgres-polling.yml"]
     }
 
-    postgrespollingcdc {
+    postgrespollinginfrastructure {
         projectName = null
         useComposeFiles = ["docker-compose-postgres-polling.yml"]
-        startedServices = ["cdc-service"]
+        startedServices = ["cdc-service", "mongodb"]
     }
 
     postgreswal {
@@ -70,10 +70,10 @@ dockerCompose {
         useComposeFiles = ["docker-compose-postgres-wal.yml"]
     }
 
-    postgreswalcdc {
+    postgreswalinfrastructure {
         projectName = null
         useComposeFiles = ["docker-compose-postgres-wal.yml"]
-        startedServices = ["cdc-service"]
+        startedServices = ["cdc-service", "mongodb"]
     }
 }
 
