--- a/gradle.properties
+++ b/gradle.properties
@@ -5,12 +5,13 @@ deployUrl=file:///Users/cer/.m2/testdeploy
 eventuateMavenRepoUrl=https://dl.bintray.com/eventuateio-oss/eventuate-maven-release/,https://dl.bintray.com/eventuateio-oss/eventuate-maven-milestone,file:///Users/cer/.m2/testdeploy,https://dl.bintray.com/eventuateio-oss/eventuate-maven-rc,https://snapshots.repositories.eventuate.io/repository
 
 springBootVersion=2.1.5.RELEASE
+micronautVersion=2.4.1
 
 eventuateExamplesBaseImageVersion=BUILD-6
-eventuatePlatformVersion=2021.2.RELEASE
+eventuatePlatformVersion=2021.2.BUILD-SNAPSHOT
 eventuateUtilVersion=0.9.0.RELEASE
 dockerComposePluginVersion=0.4.5
-eventuateMessagingKafkaVersion=0.13.0.RELEASE
+eventuateMessagingKafkaVersion=0.13.0.BUILD-SNAPSHOT
 version=0.1.0-SNAPSHOT
 
 eventuateCommonImageVersion=0.13.0.RELEASE
