--- a/docker-compose-mysql-binlog.yml
+++ b/docker-compose-mysql-binlog.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: ./order-service/
       args:
-        baseImageVersion: ${EVENTUATE_JAVA_BASE_IMAGE_VERSION?}
+        baseImageVersion: ${EVENTUATE_JAVA_BASE_IMAGE_VERSION}
     image: eventuateexamples/eventuate-tram-examples-micronaut-customers-and-orders-order-service
     ports:
       - "8081:8080"
@@ -24,7 +24,7 @@ services:
     build:
       context: ./customer-service/
       args:
-        baseImageVersion: ${EVENTUATE_JAVA_BASE_IMAGE_VERSION?}
+        baseImageVersion: ${EVENTUATE_JAVA_BASE_IMAGE_VERSION}
     image: eventuateexamples/eventuate-tram-examples-micronaut-customers-and-orders-customer-service
     ports:
       - "8082:8080"
@@ -44,7 +44,7 @@ services:
     build:
       context: ./order-history-service/
       args:
-        baseImageVersion: ${EVENTUATE_JAVA_BASE_IMAGE_VERSION?}
+        baseImageVersion: ${EVENTUATE_JAVA_BASE_IMAGE_VERSION}
     image: eventuateexamples/eventuate-tram-examples-micronaut-customers-and-orders-order-history-service
     ports:
       - "8083:8080"
@@ -95,9 +95,8 @@ services:
 
 
   mongodb:
-    image: mongo:3.0.4
+    image: mongo:4.2.12
     hostname: mongodb
-    command: mongod --smallfiles
     ports:
       - "27017:27017"
 
