--- a/order-history-service/build.gradle
+++ b/order-history-service/build.gradle
@@ -12,15 +12,9 @@ repositories {
 
 apply plugin: 'docker-compose'
 
-dockerCompose.isRequiredBy(test)
-
-dockerCompose {
-    useComposeFiles = ['docker-compose-integration-tests.yml']
-}
-
 dependencyManagement {
     imports {
-        mavenBom 'io.micronaut:micronaut-bom:1.1.3'
+        mavenBom "io.micronaut:micronaut-bom:$micronautVersion"
     }
 }
 
@@ -31,10 +25,8 @@ dependencies {
 
     compile "io.eventuate.tram.core:eventuate-tram-micronaut-consumer-kafka"
 
-    compile "org.mongodb:mongo-java-driver"
-    compile 'io.micronaut.configuration:micronaut-mongo-reactive'
+    implementation("io.micronaut.mongodb:micronaut-mongo-sync")
 
-    compile "io.micronaut:micronaut-spring"
     annotationProcessor "javax.persistence:javax.persistence-api:2.2"
     annotationProcessor "io.micronaut:micronaut-inject-java"
     annotationProcessor "io.micronaut:micronaut-validation"
@@ -49,6 +41,7 @@ dependencies {
     compile "io.swagger.core.v3:swagger-annotations"
     compile "io.eventuate.util:eventuate-util-swagger-ui:$eventuateUtilVersion"
 
+    testAnnotationProcessor "io.micronaut:micronaut-inject-java"
     testCompile "org.junit.jupiter:junit-jupiter-api"
     testCompile "io.micronaut.test:micronaut-test-junit5"
     testRuntime "org.junit.jupiter:junit-jupiter-engine"
@@ -58,4 +51,9 @@ mainClassName = "io.eventuate.examples.tram.ordersandcustomers.orderhistoryservi
 
 shadowJar {
     mergeServiceFiles()
+}
+
+// use JUnit 5 platform
+test {
+    useJUnitPlatform()
 }
